adding date to the task object

--- a/views/tasks_form.cshtml
+++ b/views/tasks_form.cshtml
@@ -8,6 +8,8 @@
       <option value="@category.GetId()">@category.GetName()</option>
     }
   </select>
+  <label for="due-date">due date</label>
+  <input type="date" name="due-date">
   <button type="submit">Add new task</button>
 </form>
 <p><a href="/">Back home</a></p>
