--- a/views/tasks.cshtml
+++ b/views/tasks.cshtml
@@ -8,7 +8,7 @@ else
   <ul>
     @foreach (var task in Model)
     {
-      <li>@task.GetDescription()</li>
+      <li>@task.GetDescription() - @task.GetDateTime()</li>
     }
   </ul>
   <form action="/tasks/delete" method="post">
