add categories to task and task to categories functions in nancy

--- a/views/tasks_form.cshtml
+++ b/views/tasks_form.cshtml
@@ -2,14 +2,8 @@
 <form action="/tasks/new" method="post">
   <label for="task-description">Task description:</label>
   <input id="task-description" name="task-description" type="text">
-  <select name="category-id">
-    @foreach (var category in Model)
-    {
-      <option value="@category.GetId()">@category.GetName()</option>
-    }
-  </select>
-  <label for="due-date">due date</label>
-  <input type="date" name="due-date">
+  <label for="task-dueDateTime">Date:</label>
+  <input id="task-dueDateTime" name="task-dueDateTime" type="text">
   <button type="submit">Add new task</button>
 </form>
 <p><a href="/">Back home</a></p>
