--- a/views/categories.cshtml
+++ b/views/categories.cshtml
@@ -1,12 +1,14 @@
-<h1>All categories</h1>
-@if (@Model.Count == 0)
+<h1>To Do List</h1>
+<hr />
+<h2>Categories:</h2>
+@if (Model.Count != 0)
 {
-  <p>There are no categories.</p>
+  <ul>
+    @foreach (var category in Model)
+    {
+      <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
+    }
+  </ul>
 }
-<ul>
-  @foreach (var category in Model)
-  {
-    <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
-  }
-</ul>
-<a href="/categories/new">Add new category</a>
+<h4><a href="/categories/new">Add a new category</a></h4>
+<h4><a href="/">Return home</a></h4>
